force-app/main/default/objects/Lead/fields/CPF_CNPJ__c.field-meta.xml
<CustomField>
    <fullName>CPF_CNPJ__c</fullName>
    <inlineHelpText>O campo deverá ser preenchido da seguinte maneira: CPF XXX.XXX.XXX-XX e CNPJ: XX.XXX.XXX/XXXX-XX</inlineHelpText>
    <label>CPF/CNPJ</label>
    <length>18</length>
    <type>Text</type>
</CustomField>