force-app/main/default/objects/Lead/fields/Razao_social__c.field-meta.xml
<CustomField>
    <fullName>Razao_social__c</fullName>
    <description>255</description>
    <label>Razão social</label>
    <length>255</length>
    <type>Text</type>
</CustomField>