force-app/main/default/objects/Lead/fields/Tem_fornecedor__c.field-meta.xml
<CustomField>
    <fullName>Tem_fornecedor__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Selecionar caso a empresa já utilize o serviço de viagens corporativas pela concorrência.</inlineHelpText>
    <label>Tem fornecedor?</label>
    <type>Checkbox</type>
</CustomField>